config/manifests/apt-mirror/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: apt-mirror
  labels:
    app: apt-mirror
    vendor: saltlabs
    category: software
