config/manifests/apt-mirror/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apt-mirror
spec:
  selector:
    matchLabels:
      app.kubernetes.io/component: apt-mirror
      app.kubernetes.io/part-of: apt-mirror.salt-labs.tech
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: apt-mirror-frontend
        app.kubernetes.io/instance: apt-mirror
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: apt-mirror.salt-labs.tech
    spec:
      containers:
        - name: apt-mirror-frontend
          image: docker.io/nginx:1.19.7-alpine
          livenessProbe:
            httpGet:
              path: /?liveness
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /?readiness
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 20
          resources:
            limits:
              memory: 256Mi
              cpu: 500m
            requests:
              memory: 128Mi
              cpu: 250m
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: apt-mirror-data
            - mountPath: /etc/nginx/conf.d
              name: nginx
            - mountPath: /usr/share/nginx/html/keys
              name: gpg-keys
            - mountPath: /usr/share/nginx/html/sources.list
              name: sources-list
      volumes:
        - name: apt-mirror-data
          persistentVolumeClaim:
            claimName: apt-mirror-data
        - name: nginx
          configMap:
            name: apt-mirror-frontend
        - name: gpg-keys
          secret:
            secretName: gpg-keys
        - name: sources-list
          configMap:
            name: sources-list
