config/manifests/apt-mirror/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apt-mirror
  namespace: apt-mirror
spec:
  rules:
    - host: apt-mirror.saltlabs.tech
      http:
        paths:
          - backend:
              service:
                name: apt-mirror-frontend
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
